# mediamail

./: DESIGN.md  README.md  mailbot.py  replybot.py  setup.cfg  twitterbot.py  utils.py
conf/: global.json  mailbot.json  replybot.json  twitterbot.json
conf/mappings/: mediamail.json
