[metadata]
license_file = LICENSE
name = mediamail
author = Michael Czajkowski
author_email = michael@czajkowski.ws
description = Allows email communication with Social Media (Twitter, etc.) digests
long_description = file:README.md
url = https://github.com/mczajkow/mediamail
classifiers =
	Development Status :: 1 - Planning
	Intended Audience :: Religion
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
